--- a/src/main/resources/view/AgencyView.fxml
+++ b/src/main/resources/view/AgencyView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="view.AgencyView"
+            fx:controller="ch.zhaw.roma.controller.AgencyViewController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
