--- a/src/main/resources/view/MainView.fxml
+++ b/src/main/resources/view/MainView.fxml
@@ -1,103 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<SplitPane dividerPositions="0.2045929018789144" xmlns="http://javafx.com/javafx/10.0.1"
-           xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.roma.controller.MainViewController">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<SplitPane dividerPositions="0.2045929018789144" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.roma.controller.MainViewController">
     <items>
         <AnchorPane prefHeight="600.0" prefWidth="950.0">
             <children>
-                <AnchorPane prefHeight="600.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
-                            AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <AnchorPane prefHeight="600.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
-                        <GridPane alignment="CENTER" prefHeight="600.0" prefWidth="170.0" AnchorPane.bottomAnchor="0.0"
-                                  AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <GridPane alignment="CENTER" prefHeight="600.0" prefWidth="170.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES"/>
+                                <ColumnConstraints hgrow="SOMETIMES" />
                             </columnConstraints>
                             <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
                                 <AnchorPane GridPane.rowIndex="3">
                                     <children>
-                                        <Button fx:id="openAgencyView" layoutX="41.0" layoutY="25.0"
-                                                mnemonicParsing="false" onAction="#onOpenAgencyView" text="Agenturen">
+                                        <Button fx:id="openAgencyView" layoutX="41.0" layoutY="25.0" mnemonicParsing="false" onAction="#onOpenAgencyView" text="Agenturen">
                                             <padding>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                             </padding>
                                         </Button>
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane GridPane.rowIndex="1">
                                     <children>
-                                        <Button fx:id="openBookView" alignment="CENTER" layoutX="51.0" layoutY="25.0"
-                                                mnemonicParsing="false" onAction="#onOpenBookView" text="Bücher">
+                                        <Button fx:id="openBookView" alignment="CENTER" layoutX="51.0" layoutY="25.0" mnemonicParsing="false" onAction="#onOpenBookView" text="Bücher">
                                             <padding>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                             </padding>
                                         </Button>
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane GridPane.rowIndex="2">
                                     <children>
-                                        <Button fx:id="openAuthorView" layoutX="48.0" layoutY="25.0"
-                                                mnemonicParsing="false" onAction="#onOpenAuthorView" text="Autoren">
+                                        <Button fx:id="openAuthorView" layoutX="48.0" layoutY="25.0" mnemonicParsing="false" onAction="#onOpenAuthorView" text="Autoren">
                                             <padding>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                             </padding>
                                         </Button>
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane GridPane.rowIndex="4">
                                     <children>
-                                        <Button fx:id="openTranslatorView" layoutX="40.0" layoutY="25.0"
-                                                mnemonicParsing="false" onAction="#onOpenTranslatorView"
-                                                text="Übersetzer">
+                                        <Button fx:id="openTranslatorView" layoutX="40.0" layoutY="25.0" mnemonicParsing="false" onAction="#onOpenTranslatorView" text="Übersetzer">
                                             <padding>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                             </padding>
                                         </Button>
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane GridPane.rowIndex="6">
                                     <children>
-                                        <Button layoutX="44.0" layoutY="24.0" mnemonicParsing="false" text="Optionen"
-                                                AnchorPane.leftAnchor="44.0" AnchorPane.topAnchor="24.0">
+                                        <Button layoutX="44.0" layoutY="24.0" mnemonicParsing="false" text="Optionen" AnchorPane.leftAnchor="44.0" AnchorPane.topAnchor="24.0">
                                             <padding>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                             </padding>
                                         </Button>
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane GridPane.rowIndex="5">
                                     <children>
-                                        <Button fx:id="openAdressView" layoutX="29.0" layoutY="24.0"
-                                                mnemonicParsing="false" onAction="#onOpenAdressView"
-                                                text="Alle Adressen...">
+                                        <Button fx:id="openAdressView" layoutX="29.0" layoutY="24.0" mnemonicParsing="false" onAction="#onOpenAdressView" text="Alle Adressen...">
                                             <padding>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                             </padding>
                                         </Button>
                                     </children>
                                 </AnchorPane>
                                 <AnchorPane>
                                     <children>
-                                        <Button fx:id="enterHonoraries" layoutX="17.0" layoutY="25.0"
-                                                mnemonicParsing="false" onAction="#onEnterHonoraries"
-                                                text="Honorare erfassen...">
+                                        <Button fx:id="enterHonoraries" layoutX="17.0" layoutY="25.0" mnemonicParsing="false" onAction="#onEnterHonoraries" text="Honorare erfassen...">
                                             <opaqueInsets>
-                                                <Insets/>
+                                                <Insets />
                                             </opaqueInsets>
                                             <padding>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                             </padding>
                                         </Button>
                                     </children>
@@ -108,15 +100,6 @@
                 </AnchorPane>
             </children>
         </AnchorPane>
-        <AnchorPane minHeight="600.0" minWidth="0.0" prefHeight="600.0" prefWidth="0.0">
-
-            <fx:include source="AdressView.fxml" fx:id="adressView"/>
-            <fx:include source="AgencyView.fxml" fx:id="agencyView"/>
-            <fx:include source="AuthorView.fxml" fx:id="authorView"/>
-            <fx:include source="BookView.fxml" fx:id="bookView"/>
-            <fx:include source="TranslatorView.fxml" fx:id="translatorView"/>
-            <fx:include source="OptionsView.fxml" fx:id="optionsView"/>
-
-        </AnchorPane>
+        <AnchorPane minHeight="600.0" minWidth="0.0" prefHeight="600.0" prefWidth="0.0" />
     </items>
 </SplitPane>
