--- a/src/main/resources/view/OptionsView.fxml
+++ b/src/main/resources/view/OptionsView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -12,30 +13,47 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.HBox?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.roma.controller.OptionsViewController">
 
     <children>
         <VBox prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <TitledPane maxHeight="-Infinity" minHeight="-Infinity" styleClass="base.css" text="Database Settings">
+         <TitledPane collapsible="false" maxHeight="-Infinity" minHeight="-Infinity" styleClass="base.css" text="Database Settings">
             <content>
-               <VBox prefHeight="200.0" prefWidth="100.0">
+               <HBox prefHeight="200.0" prefWidth="100.0">
                   <children>
                      <Group>
                         <children>
                            <GridPane>
                               <columnConstraints>
-                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                                 <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="200.0" />
                               </columnConstraints>
                               <rowConstraints>
-                                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                 <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
+                                 <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
                               </rowConstraints>
                               <children>
-                                 <Label text="Server:" />
-                                 <TextField GridPane.columnIndex="1" />
-                                 <Label text="Port:" GridPane.rowIndex="1" />
-                                 <Spinner GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                 <Label text="Server:">
+                                    <GridPane.margin>
+                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </GridPane.margin>
+                                 </Label>
+                                 <TextField GridPane.columnIndex="1">
+                                    <GridPane.margin>
+                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </GridPane.margin>
+                                 </TextField>
+                                 <Label text="Port:" GridPane.rowIndex="1">
+                                    <GridPane.margin>
+                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </GridPane.margin>
+                                 </Label>
+                                 <Spinner GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                    <GridPane.margin>
+                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </GridPane.margin>
+                                 </Spinner>
                               </children>
                            </GridPane>
                         </children>
@@ -44,26 +62,37 @@
                         <children>
                            <GridPane>
                               <columnConstraints>
-                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="200.0" />
                               </columnConstraints>
                               <rowConstraints>
                                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                               </rowConstraints>
                               <children>
-                                 <Label text="Username:" />
-                                 <TextField text="roma" GridPane.columnIndex="1" />
-                                 <Label text="Password" GridPane.rowIndex="1" />
-                                 <PasswordField text="roma" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                 <Label text="Username:">
+                                    <GridPane.margin>
+                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </GridPane.margin></Label>
+                                 <TextField text="roma" GridPane.columnIndex="1">
+                                    <GridPane.margin>
+                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </GridPane.margin></TextField>
+                                 <Label text="Password" GridPane.rowIndex="1">
+                                    <GridPane.margin>
+                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </GridPane.margin></Label>
+                                 <PasswordField text="roma" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                    <GridPane.margin>
+                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </GridPane.margin>
+                                 </PasswordField>
                               </children>
                            </GridPane>
                         </children>
                      </Group>
                   </children>
-               </VBox>
+               </HBox>
             </content>
          </TitledPane>
         </VBox>
