--- a/src/main/java/ch/zhaw/roma/view/EditRoMaNote.fxml
+++ b/src/main/java/ch/zhaw/roma/view/EditRoMaNote.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1500.0" prefWidth="800.0" type="AnchorPane" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.roma.view.EditRoMaNoteController">
    <children>
       <VBox prefHeight="1457.0" prefWidth="800.0">
          <children>
@@ -54,14 +54,14 @@
                         <Label text="PLZ" GridPane.rowIndex="5" />
                         <Label text="Stadt" GridPane.rowIndex="6" />
                         <Label text="Land" GridPane.rowIndex="7" />
-                        <Label text="Label" GridPane.columnIndex="1" />
-                        <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <Label fx:id="greeting" text="Label" GridPane.columnIndex="1" />
+                        <Label fx:id="firstName" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="lastName" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="street1" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label fx:id="street2" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="zipCode" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label fx:id="city" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <Label fx:id="country" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -154,8 +154,8 @@
                         <Label text="Titel" />
                         <Label text="ISBN" GridPane.rowIndex="1" />
                         <Label text="Periode" GridPane.rowIndex="2" />
-                        <Label text="Label" GridPane.columnIndex="1" />
-                        <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="title" text="Label" GridPane.columnIndex="1" />
+                        <Label fx:id="ISBN" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                   <GridPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="82.0" prefWidth="268.0">
@@ -177,10 +177,9 @@
                         <Label text="eBook" GridPane.columnIndex="2" />
                         <Label text="LP CHF" GridPane.rowIndex="1" />
                         <Label text="LP EUR" GridPane.rowIndex="2" />
-                        <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label text="Label" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                        <Label fx:id="priceHardCoverCHF" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="priceHardCoverEUR" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="priceEbook" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
                </children>
@@ -236,10 +235,10 @@
             </Label>
             <HBox prefHeight="174.0" prefWidth="613.0">
                <children>
-                  <TableView prefHeight="179.0" prefWidth="184.0">
+                  <TableView fx:id="soldBooks" prefHeight="179.0" prefWidth="184.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="Jahr" />
-                      <TableColumn prefWidth="75.0" text="Exemplare" />
+                      <TableColumn fx:id="yearColumnSB" prefWidth="75.0" text="Jahr" />
+                      <TableColumn fx:id="amountColumnSB" prefWidth="75.0" text="Exemplare" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -307,7 +306,7 @@
                         <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Label text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                        <Label fx:id="royalityQote" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                         <Label text="Label" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                         <Label text="Label" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                         <Label text="Label" GridPane.columnIndex="3" GridPane.rowIndex="3" />
@@ -349,10 +348,10 @@
             </Label>
             <HBox prefHeight="95.0" prefWidth="800.0">
                <children>
-                  <TableView prefHeight="95.0" prefWidth="239.0">
+                  <TableView fx:id="settlementOverview" prefHeight="95.0" prefWidth="239.0">
                     <columns>
-                      <TableColumn prefWidth="168.0" text="Abrechnung per" />
-                      <TableColumn prefWidth="70.0" text="EUR" />
+                      <TableColumn fx:id="yearColumnSM" prefWidth="168.0" text="Abrechnung per" />
+                      <TableColumn fx:id="amountColumnSM" prefWidth="70.0" text="EUR" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -384,4 +383,4 @@
          </children>
       </VBox>
    </children>
-</AnchorPane>
+</fx:root>
